[#25] Add StatusView